--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
     "devDependencies": {
         "autoprefixer": "^10.4.20",
         "axios": "^1.6.4",
+        "flowbite": "^2.5.2",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.49",
         "tailwindcss": "^3.4.15",
         "vite": "^5.0.0"
-    },
-    "dependencies": {
-        "@material-tailwind/html": "^2.3.2"
     }
 }
