--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "apexcharts": "^4.3.0"
     }
 }
